# alkanes-nft-contract

./: .gitignore
alkanes-collection/: Cargo.toml  README.md  build.rs
alkanes-collection/src/: lib.rs  whitelist.json
alkanes-collection/src/generation/: encoded_traits.json  mod.rs  svg_generator.rs  svg_template.json  svg_templates.json
alkanes-collection/tests/: merkle_generator.rs  whitelist.json
alkanes-nft/: Cargo.toml  LICENSE  README.md  build.rs
alkanes-nft/src/: lib.rs
nft-generator/: Cargo.toml
nft-generator/src/: encoded_traits.json  main.rs  svg_generator.rs
