[package]
name = "alkanes-collection"
version = "0.1.0"
edition = "2021"
description = "iDclub"
authors = ["iDclub"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
serde_json = "1.0.140"
hex = "0.4.3"
rs_merkle = "1.5.0"

[dev-dependencies]
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.40"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = ["test-utils"] }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = [
    "test-utils",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.3.0", features = [
    "test-utils",
] }
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"

[features]
default = []
test = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }